--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@capacitor/android": "^3.4.3",
     "@capacitor/cli": "^3.5.1",
     "@capacitor/core": "^3.5.1",
+    "@meforma/vue-toaster": "^1.3.0",
     "axios": "^0.26.1",
     "bulma": "^0.9.3",
     "core-js": "^3.6.5",
+    "stylus": "^0.57.0",
+    "stylus-loader": "^3.0.2",
     "vue": "^3.2.31",
     "vue-google-login": "^2.0.5",
     "vue-google-signin-button-directive": "^1.0.3",
