--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,9 @@
 {
-  "appId": "com.example.app",
+  "appId": "org.univ.compostmap",
+  "server": {
+   "cleartext": true,
+   "url": "http://localhost:8072"
+  },
   "appName": "erudit",
   "bundledWebRuntime": false,
   "npmClient": "npm",
